--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -1,16 +1,4 @@
-<div>
-  <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <% if @user.id == current_user.id %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
-</div>
-
-<%= render 'post_images/list', post_images: @post_images %>
-
-<!-- ユーザーの投稿一覧 -->
-
-<% @post_images.each do |post_image| %>
+<% post_images.each do |post_image| %>
 <div>
   <%= link_to post_image_path(post_image.id) do %>
     <%= image_tag post_image.get_image %>
