--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 </div>
 
-<%= render 'post_images/list', post_images: @post_images %>
+<%= render 'public/post_images/list', post_images: @post_images %>
 
 <!-- ユーザーの投稿一覧 -->
 
